# dep-solver

./: README.md  exp1.py  exp2.py  exp3.py  getver_v1.py  pyproject.toml  requirements.txt
assets/: requirements1.in
poetry/: pyproject.toml
src/dep_solver/: __init__.py
