[project]
name = "dep-solver"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nat-chan", email = "ogino.natsuki.tm@alumni.tsukuba.ac.jp" }
]
dependencies = [
    "ruff>=0.4.9",
    "mypy",
    "pydantic",
    "pip-tools>=7.4.1",
    "ipykernel>=6.29.4",
    "isort>=5.13.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]


[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"
ignore = ["E701"]  # ignore https://docs.astral.sh/ruff/rules/multiple-statements-on-one-line-colon/

[tool.ruff.lint]
exclude = [".venv"]

select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",  # pycodestyle errors
    "G",
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "EXE",
    "F",
    "SIM1",
    # Not included in flake8
    "LOG",
    "NPY",
    "PERF",
    "PGH004",
    "PIE794",
    "PIE800",
    "PIE804",
    "PIE807",
    "PIE810",
    "PLC0131", # type bivariance
    "PLC0132", # type param mismatch
    "PLC0205", # string as __slots__
    "PLE",
    "PLR0133", # constant comparison
    "PLR0206", # property with params
    "PLR1722", # use sys exit
    "PLW0129", # assert on string literal
    "PLW0406", # import self
    "PLW0711", # binary op exception
    "PLW1509", # preexec_fn not safe with threads
    "PLW3301", # nested min max
    "PT006", # TODO: enable more PT rules
    "PT022",
    "PT023",
    "PT024",
    "PT025",
    "PT026",
    "PYI",
    "RUF008", # mutable dataclass default
    "RUF015", # access first ele in constant time
    "RUF016", # type error non-integer index
    "RUF017",
    "TRY200", # TODO: migrate from deprecated alias
    "TRY302",
]
