[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["nat-chan <ogino.natsuki.tm@alumni.tsukuba.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
diffusers = ">=0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
